Subscription: fix overflow scroll

--- a/src/styles/subs.scss
+++ b/src/styles/subs.scss
@@ -1,5 +1,5 @@
 .subscription {
-  @apply block lg:flex lg:items-center container mx-auto 
+  @apply block lg:flex lg:items-center container mx-auto overflow-hidden
   py-10
   lg:py-36 xl:pl-24;
   .subs-texts {
@@ -13,7 +13,7 @@
     }
     .title {
       @extend .title-2-sizing;
-      @apply font-bold mx-auto text-center md:text-left 
+      @apply font-bold mx-auto text-center md:text-left
       md:pt-6
       pb-7
       max-w-[370px] sm:max-w-[550px] md:max-w-[800px];
@@ -21,15 +21,15 @@
     .sub-btn {
       @extend .btn-1, .title-5-sizing;
 
-      @apply flex items-center 
+      @apply flex items-center
       mx-auto lg:mx-0
-      font-bold 
+      font-bold
       py-2.5 lg:py-3
       pl-5 pr-3 lg:pl-6 lg:pr-4
       border-orange w-fit;
 
       .btn-icon {
-        @apply ml-4 bg-orange p-1 rounded-full 
+        @apply ml-4 bg-orange p-1 rounded-full
         h-9 w-9;
       }
     }
